tests/errors/null_to_nonnull_assignment.dang
# Null cannot initialize a non-null slot
pub value: String! = null
